testcases/invalid/semanticErr/sideeffect/incrementTypeErr.wacc
# type mismatch: int <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  bool b = true;
  b++
end